--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Hi, I am Chaeyoung Lee, from South Korea 🙂</h1>
-    <p>I am an undergraduate student majoring in Nursing at Seoul National University, where I am also pursuing interdisciplinary minors in Brain-Mind-Behavior and Learning Sciences, along with a Microdegree in Big Data.</p>
-    <p>With a strong interest in integrating digital technology with human-centered healthcare, I have participated in multiple research projects ranging from cognitive neuroscience studies on children’s memory and language development to deep learning for CEUS-based liver tumor classification.</p>
-    <p>Currently, I am a research intern at the AI Medical Imaging Lab, where I contribute to developing and evaluating deep learning models for medical image analysis. I  am also leading the development of a Python-based self-assessment platform designed to enhance mental health awareness among university students.</p>
-    <p>My goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
-    <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, or talking with the people I care about. 📚🎶🌳🌼☕🍰💬💛</p>
+    <h1>Hello, I am Chaeyoung Lee, from South Korea 🙂</h1>
+    <p>Welcome to my website!</p>
   </header>
 </body>
 </html>
