Relocate <Header> and <About me> in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- 🌼 Header (페이지 최상단 인사말) -->
+  <header>
+    <h1>Hello, I am Chaeyoung Lee, from South Korea 🙂</h1>
+    <p>Welcome to my website!</p>
+  </header>
+  
   <!-- 🌿 About Me Section -->
   <section id="about" style="padding: 40px; max-width: 800px; margin: auto;">
     <h2>About Me</h2>
@@ -17,9 +22,5 @@
     <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, or talking with the people I care about. 📚🎶🌳🌼☕🍰💬💛</p>
   </section>
 
-  <header>
-    <h1>Hello, I am Chaeyoung Lee, from South Korea 🙂</h1>
-    <p>Welcome to my website!</p>
-  </header>
 </body>
 </html>
