Update <Education&Experiences> in index.html

--- a/index.html
+++ b/index.html
@@ -22,5 +22,37 @@
     <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, or talking with the people I care about. 📚🎶🌳🌼☕🍰💬💛</p>
   </section>
 
+  <!-- 🎓 Education & Experience Section -->
+  <section id="education" style="padding: 40px; max-width: 800px; margin: auto;">
+    <h2>Education & Experience</h2>
+  
+    <h3>Education</h3>
+    <ul>
+      <li><strong>B.S. in Nursing</strong>, Seoul National University (2019–present)<br>
+      Interdisciplinary Minors: Brain-Mind-Behavior / Learning Sciences<br>
+      Microdegree: Big Data</li>
+    </ul>
+
+    <h3>Research Internships</h3>
+    <ul>
+      <li><strong>AI Medical Imaging Lab</strong>, SNU ECE (Jan 2025 – Present)<br>
+      - Conducted deep learning experiments (3D CNN, CNN-LSTM) for CEUS-based liver tumor classification (HCC vs. FNH) and statistical analysis<br>
+      - Participated in PNI prediction using MRI data from Samsung Medical Center</li>
+
+      <li><strong>Developmental Cognitive Neuroscience Lab</strong>, SNU BCS (Sep 2024 – Dec 2024)<br>
+      - Researched children's language development and episodic memory recall<br>
+      - Applied NLP techniques (TF-IDF, Word2Vec, SBERT), analyzed cosine similarity<br>
+      - Awarded <em>Best Poster</em> at SNU Undergraduate Research Conference</li>
+    </ul>
+
+    <h3>Additional Experience</h3>
+    <ul>
+      <li><strong>Project Developer</strong>, SeNseU Mental Health App, SNU Programming Foundations course (Apr 2025 – Present)</li>
+      <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (Jan 2025 – Feb 2025)</li>
+      <li><strong>Private Tutor</strong> for middle and high school students in Math, English, and Science (2017 – Present)</li>
+    </ul>
+  </section>
+
+
 </body>
 </html>
