Update <Projects> in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <section id="about" style="padding: 40px; max-width: 800px; margin: auto;">
     <h2>About Me</h2>
     <p>I am an undergraduate student majoring in Nursing at Seoul National University, where I am also pursuing interdisciplinary minors in Brain-Mind-Behavior and Learning Sciences, along with a Microdegree in Big Data.</p>
-    <p>With a strong interest in integrating digital technology with human-centered healthcare, I have participated in multiple research projects ranging from cognitive neuroscience studies on children’s memory and language development to deep learning for CEUS-based liver tumor classification.</p>
+    <p>With a strong interest in integrating digital technology with human-centered healthcare, I have participated in multiple research projects ranging from cognitive neuroscience studies to medical AI.</p>
     <p>Currently, I am a research intern at the AI Medical Imaging Lab, where I contribute to developing and evaluating deep learning models for medical image analysis. I  am also leading the development of a Python-based self-assessment platform designed to enhance mental health awareness among university students.</p>
     <p>My goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
     <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, or talking with the people I care about. 📚🎶🌳🌼☕🍰💬💛</p>
@@ -29,19 +29,19 @@
     <h3>Education</h3>
     <ul>
       <li><strong>B.S. in Nursing</strong>, Seoul National University (2019–present)<br>
-      Interdisciplinary Minors: Brain-Mind-Behavior / Learning Sciences<br>
-      Microdegree: Big Data</li>
+      Interdisciplinary Minors: <strong>Brain-Mind-Behavior / Learning Sciences</strong><br>
+      Microdegree: <strong>Big Data</strong></li>
     </ul>
 
     <h3>Research Internships</h3>
     <ul>
       <li><strong>AI Medical Imaging Lab</strong>, SNU ECE (Jan 2025 – Present)<br>
-      - Conducted deep learning experiments (3D CNN, CNN-LSTM) for CEUS-based liver tumor classification (HCC vs. FNH) and statistical analysis<br>
-      - Participated in PNI prediction using MRI data from Samsung Medical Center</li>
+      - Conducted deep learning experiments for contrast-enhanced ultrasound(CEUS)-based liver tumor classification and performance evaluation through statistical analysis<br>
+      - Participated in a project on perineural invasion(PNI) prediction using MRI data from Samsung Medical Center</li>
 
       <li><strong>Developmental Cognitive Neuroscience Lab</strong>, SNU BCS (Sep 2024 – Dec 2024)<br>
-      - Researched children's language development and episodic memory recall<br>
-      - Applied NLP techniques (TF-IDF, Word2Vec, SBERT), analyzed cosine similarity<br>
+      - Investigated children's language development and episodic memory through behavioral experiments and analysis<br>
+      - Applied NLP techniques to compute cosine similarity between children’s free recall responses and reference content from experimental video stimuli<br>
       - Awarded <em>Best Poster</em> at SNU Undergraduate Research Conference</li>
     </ul>
 
@@ -51,6 +51,27 @@
       <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (Jan 2025 – Feb 2025)</li>
       <li><strong>Private Tutor</strong> for middle and high school students in Math, English, and Science (2017 – Present)</li>
     </ul>
+
+  <!-- 💻 Projects Section -->
+  <section id="projects" style="padding: 40px; max-width: 800px; margin: auto;">
+    <h2>Projects</h2>
+
+    <h3>SeNseU: A Mental Health Self-Assessment Platform</h3>
+    <p>Developed a Python-based application to screen mental health, sleep quality, and alcohol use among university students using validated tools (PHQ-9, PSQI-K, AUDIT-K). Implemented modular scoring functions, an interactive user flow, and personalized support suggestions</p>
+
+    <h3>CEUS-based Liver Tumor Classification</h3>
+    <p>uilt 3D CNN and CNN-LSTM models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using contrast-enhanced ultrasound (CEUS) data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center.</p>
+
+    <h3>MRI-based PNI Prediction</h3> 
+    <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center.</p>
+
+    <h3>Language Development and Event Boundaries in Children’s Episodic Memory (Best Poster Award)</h3> 
+    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed free recall responses using NLP techniques (e.g., TF-IDF, Word2Vec, SBERT) and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the Best Poster Award.</p>
+
+    <h3>Mental Health Nursing Editing</h3>
+    <p>Revised the entire Mental Health Nursing section of a Korean national licensing exam preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
+  </section>
+
   </section>
 
 
