--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center.</p>
 
     <h3>Language Development and Event Boundaries in Children’s Episodic Memory (Best Poster Award)</h3> 
-    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed free recall responses using NLP techniques (e.g., TF-IDF, Word2Vec, SBERT) and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the Best Poster Award.</p>
+    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed free recall responses using NLP techniques (e.g., TF-IDF, Word2Vec, SBERT) and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the 🏆 Best Poster Award.</p>
 
     <h3>Mental Health Nursing Editing</h3>
     <p>Revised the entire Mental Health Nursing section of a Korean national licensing exam preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
