Update <CV> in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (Jan 2025 – Feb 2025)</li>
       <li><strong>Private Tutor</strong> for middle and high school students in Math, English, and Science (2017 – Present)</li>
     </ul>
-
+  </section>
+  
   <!-- 💻 Projects Section -->
   <section id="projects" style="padding: 40px; max-width: 800px; margin: auto;">
     <h2>Projects</h2>
@@ -72,7 +73,13 @@
     <p>Revised the entire Mental Health Nursing section of a Korean national licensing exam preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
   </section>
 
+  <!-- 📄 Resume Section -->
+  <section id="resume" style="padding: 40px; max-width: 800px; margin: auto; text-align: center;">
+    <h2>Resume</h2>
+    <p>You can download or view my full CV below:</p>
+    <a href="chaeyoung_lee_cv.pdf" target="_blank" style="padding: 10px 20px; background-color: #4CAF50; color: white; border-radius: 5px; text-decoration: none;">📄 View My CV</a>
   </section>
+  
 
 
 </body>
