--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="resume" style="padding: 40px; max-width: 800px; margin: auto; text-align: center;">
     <h2>Resume</h2>
     <p>You can download or view my full CV below:</p>
-    <a href="chaeyoung_lee_cv.pdf" target="_blank" style="padding: 10px 20px; background-color: #4CAF50; color: white; border-radius: 5px; text-decoration: none;">📄 View My CV</a>
+    <a href="Chaeyoung_Lee_CV.pdf" target="_blank" style="padding: 10px 20px; background-color: #4CAF50; color: white; border-radius: 5px; text-decoration: none;">📄 View My CV</a>
   </section>
   
 
