--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Chaeyoung Lee</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- 🌼 Header (페이지 최상단 인사말) -->
@@ -79,8 +80,27 @@
     <p>You can download or view my full CV below:</p>
     <a href="Chaeyoung_Lee_CV.pdf" target="_blank" style="padding: 10px 20px; background-color: #4CAF50; color: white; border-radius: 5px; text-decoration: none;">📄 View My CV</a>
   </section>
-  
 
+  <!-- 📬 Contact Section (with icons and 2 emails) -->
+  <section id="contact" style="padding: 40px; max-width: 800px; margin: auto; text-align: center;">
+    <h2>Contact</h2>
+    <p>You’re welcome to reach out for collaboration, questions, or just to say hello!</p>
+    <div style="font-size: 18px; line-height: 1.8;">
+      <p>📧 <strong>SNU Email</strong>: <a href="mailto:leecy0130@snu.ac.kr">leecy0130@snu.ac.kr</a></p>
+      <p>📧 <strong>Personal Email</strong>: <a href="mailto:cchaeyyoung@gmail.com">cchaeyyoung@gmail.com</a></p>
+      <p>💻 <strong>GitHub</strong>: <a href="https://github.com/its-chaeyounglee" target="_blank">its-chaeyounglee</a></p>
+    </div>
+    <div style="font-size: 28px; margin-top: 10px;">
+      <a href="mailto:leecy0130@snu.ac.kr" target="_blank" style="margin: 0 10px;"><i class="fas fa-envelope"></i></a>
+      <a href="https://github.com/its-chaeyounglee" target="_blank" style="margin: 0 10px;"><i class="fab fa-github"></i></a>
+      <!-- LinkedIn이 있다면 여기에 추가 -->
+    </div>
+  </section>
 
+<!-- 🌙 Footer -->
+<footer style="background-color: #f0f0f0; padding: 20px; text-align: center; font-size: 14px; color: #666;">
+  <p>© 2025 Chaeyoung Lee. All rights reserved.</p>
+  <p>Made with 💛 and ☕ in Seoul.</p>
+</footer>
 </body>
 </html>
