Update 📚 in <Footer> index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <!-- 🌙 Footer -->
 <footer style="background-color: #f0f0f0; padding: 20px; text-align: center; font-size: 14px; color: #666;">
   <p>© 2025 Chaeyoung Lee. All rights reserved.</p>
-  <p>Made with 💛 and ☕ in Seoul.</p>
+  <p>Made with 📚 and ☕ in Seoul.</p>
 </footer>
 </body>
 </html>
