Separate <Education> and <Experiences> in index.html

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
 
   <!-- 🎓 Education & Experience Section -->
   <section id="education" style="padding: 40px; max-width: 800px; margin: auto;">
-    <h2>Education & Experience</h2>
-  
-    <h3>Education</h3>
+    <h2>Education</h2>
     <ul>
       <li><strong>B.S. in Nursing</strong>, Seoul National University (2019–present)<br>
       Interdisciplinary Minors: <strong>Brain-Mind-Behavior / Learning Sciences</strong><br>
       Microdegree: <strong>Big Data</strong></li>
     </ul>
+  </section>
 
+  <section id="experiences" style="padding: 40px; max-width: 800px; margin: auto;">
+    <h2>Experiences</h2>  
+    
     <h3>Research Internships</h3>
     <ul>
       <li><strong>AI Medical Imaging Lab</strong>, SNU ECE (Jan 2025 – Present)<br>
@@ -46,7 +48,7 @@
       - Awarded <em>Best Poster</em> at SNU Undergraduate Research Conference</li>
     </ul>
 
-    <h3>Additional Experience</h3>
+    <h3>Additional Experiences</h3>
     <ul>
       <li><strong>Project Developer</strong>, SeNseU Mental Health App, SNU Programming Foundations course (Apr 2025 – Present)</li>
       <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (Jan 2025 – Feb 2025)</li>
