--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <h3>SeNseU: A Mental Health Self-Assessment Platform</h3>
     <p>Developed a Python-based application to screen mental health, sleep quality, and alcohol use among university students using validated tools (PHQ-9, PSQI-K, AUDIT-K). Implemented modular scoring functions, an interactive user flow, and personalized support suggestions</p>
 
-    <h3>CEUS-based Liver Tumor Classification</h3>
+    <h3>CEUS-based Liver Tumor Classification</h3> <em>In preparation<em>
     <p>uilt 3D CNN and CNN-LSTM models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using contrast-enhanced ultrasound (CEUS) data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center.</p>
 
-    <h3>MRI-based PNI Prediction</h3> 
+    <h3>MRI-based PNI Prediction</h3> <em>In preparation<em>
     <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center.</p>
 
     <h3>Language Development and Event Boundaries in Children’s Episodic Memory</h3> 
