Relocate <Navigation bar> and chane Header style index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  <!-- 🧭 Navigation Bar -->
+  <nav style="position: sticky; top: 0; background-color: #ffffffee; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100;">
+    <a href="#about" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">About</a>
+    <a href="#education" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Education</a>
+    <a href="#expriences" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Experiences</a>
+    <a href="#projects" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Projects</a>
+    <a href="#resume" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Resume</a>
+    <a href="#contact" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Contact</a>
+  </nav>
+  
   <!-- 🌼 Header (페이지 최상단 인사말) -->
-  <header>
+  <header style="text-align: center; padding: 60px 20px;">
     <h1>Hello, I am Chaeyoung Lee, from South Korea 🙂</h1>
     <p>Welcome to my website!</p>
   </header>
@@ -64,10 +74,10 @@
     <p>Developed a Python-based application to screen mental health, sleep quality, and alcohol use among university students using validated tools (PHQ-9, PSQI-K, AUDIT-K). Implemented modular scoring functions, an interactive user flow, and personalized support suggestions</p>
 
     <h3>CEUS-based Liver Tumor Classification</h3>
-    <p>uilt 3D CNN and CNN-LSTM models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using contrast-enhanced ultrasound (CEUS) data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center. (In preparation)</p>
+    <p>Built 3D CNN and CNN-LSTM models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using contrast-enhanced ultrasound (CEUS) data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
 
     <h3>MRI-based PNI Prediction</h3>
-    <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center.(In preparation)</p>
+    <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
 
     <h3>Language Development and Event Boundaries in Children’s Episodic Memory</h3> 
     <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed free recall responses using NLP techniques (e.g., TF-IDF, Word2Vec, SBERT) and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the 🏆 <em>Best Poster Award<em>.</p>
@@ -104,16 +114,5 @@
   <p>© 2025 Chaeyoung Lee. All rights reserved.</p>
   <p>Made with 📚 and ☕ in Seoul.</p>
 </footer>
-      
-  <!-- 🧭 Navigation Bar -->
-<nav style="position: sticky; top: 0; background-color: #ffffffee; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100;">
-  <a href="#about" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">About</a>
-  <a href="#education" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Education</a>
-  <a href="#expriences" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Experiences</a>
-  <a href="#projects" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Projects</a>
-  <a href="#resume" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Resume</a>
-  <a href="#contact" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Contact</a>
-</nav>
-
 </body>
 </html>
