--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav style="position: sticky; top: 0; background-color: #ffffffee; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); z-index: 100;">
     <a href="#about" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">About</a>
     <a href="#education" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Education</a>
-    <a href="#expriences" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Experiences</a>
+    <a href="#experiences" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Experiences</a>
     <a href="#projects" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Projects</a>
     <a href="#resume" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Resume</a>
     <a href="#contact" style="margin: 0 20px; text-decoration: none; color: #1e3d59;">Contact</a>
