Edit some phrases in index.html

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
   
   <!-- 🌼 Header (페이지 최상단 인사말) -->
   <header style="text-align: center; padding: 60px 20px;">
-    <h1>Hello, I am Chaeyoung Lee, from South Korea 🙂</h1>
+    <h1>Hi 🖐, I am Chaeyoung Lee 😊</h1>
     <p>Welcome to my website!</p>
   </header>
   
   <!-- 🌿 About Me Section -->
   <section id="about" style="padding: 40px; max-width: 800px; margin: auto;">
     <h2>About Me</h2>
-    <p>I am an undergraduate student majoring in Nursing at Seoul National University, where I am also pursuing interdisciplinary minors in Brain-Mind-Behavior and Learning Sciences, along with a Microdegree in Big Data.</p>
+    <p>I am an undergraduate student majoring in Nursing at <em>Seoul National University</em>, where I am also pursuing interdisciplinary minors in Brain-Mind-Behavior and Learning Sciences, along with a Microdegree in Big Data.</p>
     <p>With a strong interest in integrating digital technology with human-centered healthcare, I have participated in multiple research projects ranging from cognitive neuroscience studies to medical AI.</p>
     <p>Currently, I am a research intern at the AI Medical Imaging Lab, where I contribute to developing and evaluating deep learning models for medical image analysis. I  am also leading the development of a Python-based self-assessment platform designed to enhance mental health awareness among university students.</p>
     <p>My goal is to bridge clinical insight and data-driven innovation to create meaningful tools that improve people’s lives. I’m still learning, but I approach every new challenge with curiosity, humility, and a deep sense of responsibility.</p>
-    <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, or talking with the people I care about. 📚🎶🌳🌼☕🍰💬💛</p>
+    <p>In my free time, I love exploring cozy bookstores, enjoying musicals and art exhibitions, and reading everything from insightful non-fiction to comforting novels. I also cherish spending time with loved ones—whether it's taking peaceful walks with coffee in hand, sharing good food, talking with the people I care about, simply gazing at the sea to clear my mind, or capturing little joys in life, like witty signs or clever quotes that make me smile :) 📚🎶🌳🌼☕🍰💬🌊📸💛</p>
   </section>
 
   <!-- 🎓 Education & Experience Section -->
@@ -61,7 +61,7 @@
     <h3>Additional Experiences</h3>
     <ul>
       <li><strong>Project Developer</strong>, SeNseU Mental Health App, SNU Programming Foundations course (Apr 2025 – Present)</li>
-      <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (Jan 2025 – Feb 2025)</li>
+      <li><strong>Content Editor</strong>, Pacific Publishing Co., Revised Mental Health Nursing textbook for the Korean National Nursing Licensing Exam (KNNLE) (Jan 2025 – Feb 2025)</li>
       <li><strong>Private Tutor</strong> for middle and high school students in Math, English, and Science (2017 – Present)</li>
     </ul>
   </section>
@@ -74,16 +74,16 @@
     <p>Developed a Python-based application to screen mental health, sleep quality, and alcohol use among university students using validated tools (PHQ-9, PSQI-K, AUDIT-K). Implemented modular scoring functions, an interactive user flow, and personalized support suggestions</p>
 
     <h3>CEUS-based Liver Tumor Classification</h3>
-    <p>Built 3D CNN and CNN-LSTM models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using contrast-enhanced ultrasound (CEUS) data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
+    <p>Built two deep learning models to classify hepatocellular carcinoma (HCC) vs. focal nodular hyperplasia (FNH) using CEUS data. Evaluated the effects of different padding strategies and analyzed performance metrics. Contributed to manuscript development while working with clinical datasets under the guidance of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
 
     <h3>MRI-based PNI Prediction</h3>
-    <p>Contributed to a project predicting perineural invasion (PNI) in cholangiocarcinoma using MRI data. Preprocessed raw MRI scans and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
+    <p>Contributed to a project PNI in cholangiocarcinoma (CCA) using MRI data. Preprocessed raw MRI images and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
 
     <h3>Language Development and Event Boundaries in Children’s Episodic Memory</h3> 
-    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed free recall responses using NLP techniques (e.g., TF-IDF, Word2Vec, SBERT) and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the 🏆 <em>Best Poster Award<em>.</p>
+    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed children's free recall responses using NLP techniques and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the 🏆 <em>Best Poster Award<em>.</p>
 
     <h3>Mental Health Nursing Editing</h3>
-    <p>Revised the entire Mental Health Nursing section of a Korean national licensing exam preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
+    <p>Revised the entire Mental Health Nursing section of a KNNLE preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
   </section>
 
   <!-- 📄 Resume Section -->
@@ -112,7 +112,7 @@
 <!-- 🌙 Footer -->
 <footer style="background-color: #f0f0f0; padding: 20px; text-align: center; font-size: 14px; color: #666;">
   <p>© 2025 Chaeyoung Lee. All rights reserved.</p>
-  <p>Made with 📚 and ☕ in Seoul.</p>
+  <p>Made with 📚 and ☕ in Seoul, South Korea.</p>
 </footer>
 </body>
 </html>
