Change font of SNU in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <section id="education" style="padding: 40px; max-width: 800px; margin: auto;">
     <h2>Education</h2>
     <ul>
-      <li><strong>B.S. in Nursing</strong>, Seoul National University (2019–present)<br>
+      <li><strong>B.S. in Nursing</strong>, <em>Seoul National University</em> (2019–present)<br>
       Interdisciplinary Minors: <strong>Brain-Mind-Behavior / Learning Sciences</strong><br>
       Microdegree: <strong>Big Data</strong></li>
     </ul>
