Hi -> Hello in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <!-- 🌼 Header (페이지 최상단 인사말) -->
   <header style="text-align: center; padding: 60px 20px;">
-    <h1>Hi 🖐, I am Chaeyoung Lee 😊</h1>
+    <h1>Hello 🖐, I am Chaeyoung Lee 😊</h1>
     <p>Welcome to my website!</p>
   </header>
   
