received -> won in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p>Contributed to a project PNI in cholangiocarcinoma (CCA) using MRI data. Preprocessed raw MRI images and helped design pipeline illustrations for the manuscript, under the supervision of the AI Medical Imaging Lab and Samsung Medical Center. <em>(In preparation)</em></p>
 
     <h3>Language Development and Event Boundaries in Children’s Episodic Memory</h3> 
-    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed children's free recall responses using NLP techniques and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and received the 🏆 <em>Best Poster Award</em>.</p>
+    <p>Led an independent research project investigating how event boundaries in children’s episodic memory relate to language development. Analyzed children's free recall responses using NLP techniques and computed cosine similarity. Presented findings at the SNU Undergraduate Research Conference and won the 🏆 <em>Best Poster Award</em>.</p>
 
     <h3>Mental Health Nursing Editing</h3>
     <p>Revised the entire Mental Health Nursing section of a KNNLE preparation book. Ensured medical accuracy, clarity, and alignment with current clinical guidelines to support students preparing for the Korean Registered Nurse (RN) exam.</p>
