--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
   </header>
   
   <!-- 🌿 About Me Section -->
-  <section id="about" style="padding: 40px; max-width: 800px; margin: auto;">
-    <img src="profile.jpg" alt="Profile Photo" style="display: block; margin: 0 auto 20px auto; width: 180px; border-radius: 50%;" />
+  <section id="about" style="padding: 40px; max-width: 800px; margin: auto;" text-align: center;">
+    <!-- 🖼️ Profile Photo -->
+    <div style="margin-bottom: 20px;">
+      <img src="profile.jpg" alt="Profile Photo"
+           style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover;" />
+    </div>
     <h2>About Me</h2>
     <p>I am an undergraduate student majoring in Nursing at <em>Seoul National University</em>, where I am also pursuing interdisciplinary minors in Brain-Mind-Behavior and Learning Sciences, along with a Microdegree in Big Data.</p>
     <p>With a strong interest in integrating digital technology with human-centered healthcare, I have participated in multiple research projects ranging from cognitive neuroscience studies to medical AI.</p>
