Update profile.jpg in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section id="about" style="padding: 40px; max-width: 800px; margin: auto;" text-align: center;">
     <!-- 🖼️ Profile Photo -->
     <div style="margin-bottom: 20px;">
-      <img src="profile.jpg" alt="Profile Photo"
+      <img src="profile1.jpg" alt="Profile Photo"
            style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover;" />
     </div>
     <h2>About Me</h2>
